spacing fixed

--- a/mainpageStyle.css
+++ b/mainpageStyle.css
@@ -12,5 +12,12 @@ footer {
       width: 300px; 
       height: 300px;
   }
-.top7 
-{ margin-top:7px; }
+  #preview-game{
+    position: relative;
+    top:18px;
+}
+.top7 { 
+    margin-top:7px; 
+}
+
+
